--- a/microcloud-config-product-client.yml
+++ b/microcloud-config-product-client.yml
@@ -12,9 +12,9 @@ spring:
  datasource:
    type: com.alibaba.druid.pool.DruidDataSource # 配置当前要使用的数据源的操作类型
    driver-class-name: com.mysql.jdbc.Driver # 配置MySQL的驱动程序类
-   url: jdbc:mysql://192.168.109.245:63307/springcloud?serverTimezone=GMT%2B8&useSSL=false # 数据库连接地址
-   username: ztodsdevadmin # 数据库用户名
-   password: ztoeFsa@2019vfgq # 数据库连接密码
+   url: jdbc:mysql://localhost:3306/springcloud?serverTimezone=GMT%2B8&useSSL=false # 数据库连接地址
+   username: root # 数据库用户名
+   password: 123456 # 数据库连接密码
  application:
    name: microcloud-config-product-client
  profiles: dev
@@ -56,9 +56,9 @@ spring:
  datasource:
    type: com.alibaba.druid.pool.DruidDataSource # 配置当前要使用的数据源的操作类型
    driver-class-name: com.mysql.jdbc.Driver # 配置MySQL的驱动程序类
-   url: jdbc:mysql://192.168.109.245:63307/springcloud?serverTimezone=GMT%2B8&useSSL=false # 数据库连接地址
-   username: ztodsdevadmin # 数据库用户名
-   password: ztoeFsa@2019vfgq # 数据库连接密码
+   url: jdbc:mysql://localhost:3306/springcloud?serverTimezone=GMT%2B8&useSSL=false # 数据库连接地址
+   username: root # 数据库用户名
+   password: 123456 # 数据库连接密码
  application:
    name: microcloud-config-product-client
  profiles: beta
